Fixes for Android <= 2.2