@@ -11,6 +11,7 @@ import java.io.*;
 import java.util.Enumeration;
 import java.util.Scanner;
 import java.util.Map;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Arrays;
 import java.util.ArrayList;
@@ -19,6 +20,7 @@ import android.app.Activity;
 import android.app.ProgressDialog;
 import android.app.AlertDialog;
 import android.app.Dialog;
+import android.app.Instrumentation;
 
 import android.widget.TextView;
 import android.widget.Button;
@@ -44,6 +46,7 @@ import android.content.SharedPreferences;
 import android.content.Context;
 import android.content.ComponentName;
 import android.content.ActivityNotFoundException;
+import android.content.res.Resources;
 
 import android.preference.PreferenceManager;
 
@@ -69,6 +72,8 @@ public class NeuroDroid extends Activity
     private static final int DIALOG_ANDROIDTERM=0, DIALOG_MARKETNOTFOUND=1;
     private ProgressDialog pd;
     private TextView tv;
+
+    private Resources resources;
     
     /** Called when the activity is first created. */
     @Override public void onCreate(Bundle savedInstanceState) {
@@ -76,6 +81,8 @@ public class NeuroDroid extends Activity
         super.onCreate(savedInstanceState);
         setContentView(R.layout.main);
 
+        resources = getResources();
+        
         /* Create directories */
         File cacheDir = new File(CACHEDIR);
         if (!cacheDir.exists()) {
@@ -340,7 +347,7 @@ public class NeuroDroid extends Activity
             is.close();
             
         } catch (IOException e) {
-            Log.e(TAG, "Couldn't find assets file; exiting now");
+            Log.e(TAG, "Couldn't find assets file " + src + "; exiting now");
             throw new RuntimeException(e);
         }
         
@@ -359,17 +366,14 @@ public class NeuroDroid extends Activity
             if (!binDir.exists()) {
                 binDir.mkdirs();
             }
-
-            List binNameList = Arrays.asList(binName);
-            ProcessBuilder pb = new ProcessBuilder(binNameList).directory(binDir);
-            Map<String, String> env = pb.environment();
-            env.put("NEURONHOME", nrnHome);
-
-            Process process = pb.start();
-            // Waits for the command to finish.
+            
+            /* Can't set the environment on Android <= 2.2 with
+             * ProcessBuilder. Resorting back to old-school Process.exec.
+             */
+            String[] envp = {"NEURONHOME="+nrnHome};
+            Process process = Runtime.getRuntime().exec(binName, envp, binDir);
             process.waitFor();
-
-
+            
             Scanner outscanner = new Scanner(process.getInputStream());
             Scanner errscanner = new Scanner(process.getErrorStream());
             String NL = System.getProperty("line.separator");
@@ -520,15 +524,39 @@ public class NeuroDroid extends Activity
 
     /* Copy nrniv to binDir and make executable */
     public void cpNrnBin(boolean withVfp) {
-        
+        String arch = "armeabi";
+        if (withVfp) {
+            arch += "-v7a";
+        }
+            
         File binDir = new File(BINDIR);
         if (!binDir.exists()) {
             throw new RuntimeException("Couldn't find binary directory");
         }
-        if (withVfp) {
-            saveAssetsFile("armeabi-v7a/nrniv", NRNBIN);
-        } else {
-            saveAssetsFile("armeabi/nrniv", NRNBIN);
+
+        /* Catenate split files */
+        Log.v(TAG, "Looking for assets in " + arch);
+        try {
+            String[] assetsFiles = getAssets().list(arch);
+
+            File newf = new File(NRNBIN);
+            FileOutputStream os = new FileOutputStream(newf);
+            for (int i=0; i<assetsFiles.length; i++) {
+                Log.v(TAG, "Found NEURON binary part: " + assetsFiles[i]);
+                InputStream is = getAssets().open(arch + "/" + assetsFiles[i]);
+
+                byte[] buffer = new byte[is.available()]; 
+
+                is.read(buffer);
+
+                os.write(buffer);
+
+                is.close();
+            }
+            os.close();
+        }
+        catch (IOException e) {
+            throw new RuntimeException(e);
         }
 
         String[] chmodlist = {getChmod(), "755", NRNBIN};
